
@startuml
title SAD-FI – Diagrama de Classes (Sprint 2 revisado • Parcela alinhada)

skinparam defaultFontName "Arial"
skinparam classAttributeIconSize 0

class Financiamento {
  - valor_total: float
  - entrada: float
  - prazo_anos: float
  - sistema: str
  - taxa_juros_anual: float | None
  + prazo_meses: int
  + valor_financiado(): float
  + taxa_base_mensal(): float
}

class Parcela {
  + numero: int
  + amortizacao: float
  + juros: float
  + valor_total: float
  + saldo_devedor: float
  + __eq__(other): bool
}
note right of Parcela
  Convenção (código atual):
   • saldo_devedor = saldo APÓS o pagamento da parcela.
   • Para transparência quando TR/IPCA:
       - saldo_anterior {optional}
       - saldo_corrigido {optional}
       - correcao_tr_mes {optional}
end note

class SimulacaoResultado {
  + parcelas: List<Parcela>
  + total_pago: float
  + total_juros: float
  + to_dict_resumo(): dict
  + to_dataframe(): DataFrame
  + resumo_financeiro(): dict
  + __repr__(): str
}

class SimuladorSAC {
  - financiamento: Financiamento
  - taxa_juros_anual: float
  - _MARGEM_TOLERANCIA: float
  + simular(usar_tr: bool=False, tr_mensal: float|None=None): SimulacaoResultado
}

class SimuladorSAC_IPCA {
  - financiamento: Financiamento
  - tabela_ipca: TabelaIPCA
  - _MARGEM_TOLERANCIA: float
  + simular(): SimulacaoResultado
}

class ComparadorModalidades {
  + comparar(r1: SimulacaoResultado, r2: SimulacaoResultado): str
}

class RecomendadorModalidade {
  + recomendar(dados: dict): str
}

class ControladorApp {
  + executar_simulacao(dados_entrada: dict): SimulacaoResultado
  + comparar_modalidades(r1, r2): str
  + obter_recomendacao(msg: str): str
  + exportar_resultado(res: any, nome_base: str): str
}

class TabelaIPCA {
  + get_ipca(mes: int): float
}

class exportador_csv <<function>> {
  {static} exportar_cronograma_csv(df: DataFrame, nome_base: str): str
}

SimulacaoResultado "1" o-- "*" Parcela : agrega

SimuladorSAC --> Financiamento : usa
SimuladorSAC_IPCA --> Financiamento : usa

SimuladorSAC --> SimulacaoResultado
SimuladorSAC_IPCA --> SimulacaoResultado
SimuladorSAC_IPCA --> TabelaIPCA : usa

ControladorApp --> Financiamento : cria/usa
ControladorApp --> SimuladorSAC
ControladorApp --> SimuladorSAC_IPCA
ControladorApp --> ComparadorModalidades
ControladorApp --> RecomendadorModalidade
ControladorApp --> exportador_csv : exportar_cronograma_csv(...)

@enduml
